<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MovieDetailsActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rating_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="112dp" />

        <ImageView
            android:id="@+id/main_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/orig" />

        <ImageView
            android:id="@+id/gradient_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mask" />

        <TextView
            android:id="@+id/back_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:alpha="0.5"
            android:lineSpacingExtra="2sp"
            android:text="@string/movie_details_back"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/back_text"
            app:layout_constraintEnd_toStartOf="@+id/back_text"
            app:layout_constraintTop_toTopOf="@+id/back_text"
            app:srcCompat="@drawable/ic_path" />

        <ImageView
            android:id="@+id/pg_rectangle_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:alpha="0.9"
            app:layout_constraintBottom_toBottomOf="@+id/main_image"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:srcCompat="@drawable/rectangle" />

        <TextView
            android:id="@+id/pg_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_details_13"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/pg_rectangle_image"
            app:layout_constraintEnd_toEndOf="@+id/pg_rectangle_image"
            app:layout_constraintStart_toStartOf="@+id/pg_rectangle_image"
            app:layout_constraintTop_toTopOf="@+id/pg_rectangle_image" />

        <TextView
            android:id="@+id/movie_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="@string/movie_details_title"
            android:textColor="@color/movie_name"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/main_image"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/main_image" />

        <TextView
            android:id="@+id/movie_tag_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="start|center_vertical"
            android:lineSpacingExtra="4sp"
            android:text="@string/movie_details_tag"
            android:textColor="@color/tag"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/movie_name_text" />

        <ImageView
            android:id="@+id/star_1_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/star_2_image"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/movie_tag_text"
            app:srcCompat="@drawable/star_icon_on" />

        <ImageView
            android:id="@+id/star_2_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/star_3_image"
            app:layout_constraintStart_toEndOf="@+id/star_1_image"
            app:layout_constraintTop_toBottomOf="@+id/movie_tag_text"
            app:srcCompat="@drawable/star_icon_on" />

        <ImageView
            android:id="@+id/star_3_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/star_4_image"
            app:layout_constraintStart_toEndOf="@+id/star_2_image"
            app:layout_constraintTop_toBottomOf="@+id/movie_tag_text"
            app:srcCompat="@drawable/star_icon_on" />

        <ImageView
            android:id="@+id/star_4_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/star_5_image"
            app:layout_constraintStart_toEndOf="@+id/star_3_image"
            app:layout_constraintTop_toBottomOf="@+id/movie_tag_text"
            app:srcCompat="@drawable/star_icon_on" />

        <ImageView
            android:id="@+id/star_5_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/rating_guideline"
            app:layout_constraintStart_toEndOf="@+id/star_4_image"
            app:layout_constraintTop_toBottomOf="@+id/movie_tag_text"
            app:srcCompat="@drawable/star_icon_off" />

        <TextView
            android:id="@+id/reviews_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/movie_details_reviews"
            android:textColor="#6D6D80"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/star_5_image"
            app:layout_constraintStart_toStartOf="@+id/rating_guideline"
            app:layout_constraintTop_toTopOf="@+id/star_5_image" />

        <TextView
            android:id="@+id/storyline_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/movie_details_storyline"
            android:textColor="@color/movie_name"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/reviews_text" />

        <TextView
            android:id="@+id/storyline_description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:alpha="0.75"
            android:gravity="start|center_vertical"
            android:lineSpacingExtra="4sp"
            android:text="@string/movie_details_storyline_description"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/storyline_name_text" />

        <TextView
            android:id="@+id/cast_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="start|center_vertical"
            android:lineSpacingExtra="8sp"
            android:text="@string/movie_details_cast"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/storyline_description_text" />

        <ImageView
            android:id="@+id/actor_1_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/actor_2_image"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/cast_text"
            app:srcCompat="@drawable/actor_1" />

        <ImageView
            android:id="@+id/actor_2_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/actor_3_image"
            app:layout_constraintStart_toEndOf="@+id/actor_1_image"
            app:layout_constraintTop_toBottomOf="@+id/cast_text"
            app:srcCompat="@drawable/actor_2" />

        <ImageView
            android:id="@+id/actor_3_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/actor_4_image"
            app:layout_constraintStart_toEndOf="@+id/actor_2_image"
            app:layout_constraintTop_toBottomOf="@+id/cast_text"
            app:srcCompat="@drawable/actor_3" />

        <ImageView
            android:id="@+id/actor_4_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline"
            app:layout_constraintStart_toEndOf="@+id/actor_3_image"
            app:layout_constraintTop_toBottomOf="@+id/cast_text"
            app:srcCompat="@drawable/actor_4" />

        <TextView
            android:id="@+id/actor_1_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="start|center_vertical"
            android:lineSpacingExtra="2sp"
            android:text="@string/movie_details_actor_1"
            android:textColor="#D8D8D8"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/actor_1_image"
            app:layout_constraintStart_toStartOf="@+id/actor_1_image"
            app:layout_constraintTop_toBottomOf="@+id/actor_1_image" />

        <TextView
            android:id="@+id/actor_2_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="start|center_vertical"
            android:lineSpacingExtra="2sp"
            android:text="@string/movie_details_actor_2"
            android:textColor="#D8D8D8"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/actor_2_image"
            app:layout_constraintStart_toStartOf="@+id/actor_2_image"
            app:layout_constraintTop_toBottomOf="@+id/actor_2_image" />

        <TextView
            android:id="@+id/actor_3_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="start|center_vertical"
            android:lineSpacingExtra="2sp"
            android:text="@string/movie_details_actor_3"
            android:textColor="#D8D8D8"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/actor_3_image"
            app:layout_constraintStart_toStartOf="@+id/actor_3_image"
            app:layout_constraintTop_toBottomOf="@+id/actor_3_image" />

        <TextView
            android:id="@+id/actor_4_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="start|center_vertical"
            android:lineSpacingExtra="2sp"
            android:text="@string/movie_details_actor_4"
            android:textColor="#D8D8D8"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/actor_4_image"
            app:layout_constraintStart_toStartOf="@+id/actor_4_image"
            app:layout_constraintTop_toBottomOf="@+id/actor_4_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
